# nerdearla-mcp

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  README.md  compose.yml  deploy.sh  pyproject.toml
nerdearla_mcp/: server.py
